--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="edit_hint_text">键入要发送的内容</string>
     <string name="send_btn_text">发送</string>
 
+    <string name="news_content">新闻内容</string>
+
 </resources>
