--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,10 +26,17 @@
     <string name="login_password_label">密码</string>
     <string name="login_password_hint">请输入您的密码</string>
     <string name="login_button_label">登录</string>
+    <string name="login_remember_pass_label">记住密码</string>
 
     <string name="force_offline">强制下线</string>
     <string name="force_offline_button">确定</string>
     <string name="force_offline_title">警告</string>
     <string name="force_offline_message">账号在别处登录，系统将强制下线，请尝试重新登录</string>
+
+
+    <string name="system_settings_label">系统设置</string>
+    <string name="syetem_settings_name">姓名</string>
+    <string name="syetem_settings_age">年龄</string>
+    <string name="syetem_settings_married">婚否</string>
 
 </resources>
